@@ -26,6 +26,7 @@ Version 3.4 (2010-xx-xx)
 	Fixed bug where applying text color would not add spans inside link elements. This is needed due to CSS style inheritance.
 	Fixed bug where applying block formats to empty elements wouldn't render correctly on IE.
 	Fixed bug where the searchreplace plugin would add a f or r character when shortcuts where used on IE while using default dialogs.
+	Fixed bug where Opera wouldn't load scripts correctly since the onreadystate would fire even though the script wasn't loaded.
 	Fixed issue where &nbsp; wouldn't be handled correctly in the bbcode plugin if entity_encoding was set to raw.
 	Fixed issue where contents would flicker since the content css files where asynchronously loaded.
 	Fixed bug where WebKit wouldn't create links on images with a float style.
